--- a/index.html
+++ b/index.html
@@ -11,17 +11,29 @@
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-   <div class="container">
-      <div class="row">
-
-
-
-
-      </div>
-   </div>
+   <main>
+      <section class="container  vh-100">
+         <!-- btn Start -->
+         <div class="row  d-flex  justify-content-end  pt-5">
+            <div class="btn_Start  col-1  btn  btn-primary  rounded-4">Start</div>
+         </div>
 
 
+         <!-- griglia Cell -->
+         <div class="row d-flex  justify-content-center  align-items-center  mt-5">
+            <div class="_container_cell  d-flex  flex-wrap  bg-light  p-0  mt-3">
+
+               <div class="_cell  d-flex  justify-content-center  align-items-center">x</div>
+               <div class="_cell  d-flex  justify-content-center  align-items-center">x</div>
+               <div class="_cell  d-flex  justify-content-center  align-items-center">x</div>
+               <div class="_cell  d-flex  justify-content-center  align-items-center">x</div>
+               <div class="_cell  d-flex  justify-content-center  align-items-center">x</div>
+
+            </div>
+         </div>
+
+      </section>
+   </main>  
    <script src="js/script.js"></script>
 </body>
 </html>
